finish jwt task